<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beckground"
    tools:context=".LogIn">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/header"
        android:textColor="#4DF4DB"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/welcome_to_leso_chat">
    </TextView>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#57cbcc"
        android:textColorHint="#57cbcc"
        tools:ignore="TextContrastCheck">
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#57cbcc"
        android:textColorHint="#57cbcc"
        tools:ignore="TextContrastCheck">
    </EditText>

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_icon"
        android:text="@string/log_in"
        tools:ignore="TextContrastCheck">
    </Button>

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/new_user_sign_in"
        android:textColor="#ffffff"
        tools:ignore="TextContrastCheck">
    </TextView>

    <Button
        android:id="@+id/signIn"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@+id/question"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_icon"
        android:text="@string/sign_in"
        tools:ignore="TextContrastCheck">
    </Button>

</RelativeLayout>